--- a/find_alt_folded_states.ipynb
+++ b/find_alt_folded_states.ipynb
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "syn_df = pd.read_csv('../refit_bootstrapped/Figures/GAAA_coop.csv').set_index('seq')\n",
+    "syn_df = pd.read_csv('Data/GAAA_coop.csv').set_index('seq')\n",
     "syn_df['muts'] = syn_df[['first_loc','first_res','second_loc','second_res']].apply(\n",
     "                            (lambda s: ''.join([str(x) for x in s])), axis=1)\n",
     "syn_df = syn_df[syn_df['coop']=='S'][['muts','dddG']]\n",
